feat: 实现天气查询站核心功能
- 添加天气和预报 API 接口
- 创建主页面组件实现天气查询功能
- 配置 Tailwind CSS 和 Nuxt 项目
- 更新 README 文档说明项目功能和使用方法

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Nestjs specific
-/dist
-/node_modules
-/build
-/tmp
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
+node_modules
 
 # Logs
 logs
@@ -12,13 +17,14 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+.pnpm-debug.log*
 
-# dotenv environment variable files
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
 .env
-.env.development
-.env.test
-.env.production
-
-# temp directory
-.temp
-.tmp
+.env.*
+!.env.example
